Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85829

tst_Bic::sizesAndVTables fails in qt5.in#5.15

XMLWordPrintable

    • Linux/X11
    • a311d5c6f9988ae523a333e0ed25838693089acc (qt/qtbase/5.15)

      agent:2020/07/31 11:21:33 build.go:264: QWARN : tst_Bic::sizesAndVTables(QtQuickWidgets:5.15) [ 29.233 W] default unknown - the following classes were removed: ("QGradient::QGradientData")
      agent:2020/07/31 11:21:33 build.go:264: FAIL! : tst_Bic::sizesAndVTables(QtQuickWidgets:5.15) Test failed, read warnings above.
      agent:2020/07/31 11:21:33 build.go:264: Loc: [tst_bic.cpp(629)]
      agent:2020/07/31 11:21:33 build.go:264: PASS : tst_Bic::cleanupTestCase()
      agent:2020/07/31 11:21:33 build.go:264: Totals: 56 passed, 3 failed, 7 skipped, 0 blacklisted, 29307ms
      agent:2020/07/31 11:21:33 build.go:264: ********* Finished testing of tst_Bic *********

      Build log: https://testresults.qt.io/logs/qt/qtdeclarative/de7a6fe0748a8eb92a18ba522f145501213a0673/LinuxUbuntu_18_04x86_64LinuxUbuntu_18_04x86_64GCCqtci-linux-Ubuntu-18.04-x86_64-77a7bbDocumentation_OutOfSourceBuild/9342045c98dec5c188b3a0fe8de592ba40afd66a/test_1596187125/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qt5/tasks/1596186947
      Tested changes (refs/builds/qtci/5.15/1596186945):
      https://codereview.qt-project.org/c/qt/qt5/+/309095/1 Update submodules on '5.15' in qt/qt5

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            manordheim MÃ¥rten Nordheim
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes