Reintroduce QGradientData for BC purposes

It was public and thus exported in 5.15.0 but was reverted in
ba74bd6c3837d2cdabb7c73a9fa7a041323bfa45. The removal unfortunately
causes some BiC test failures, so let's just keep it public and
exported.

Fixes: QTBUG-85829
Change-Id: I992af40b19dda93aa2319a62b7f09e0ae9c687c1
Reviewed-by: Lars Knoll <lars.knoll@qt.io>